@@ -1,1 +1,1 @@
-{"is_release": false, "git_version": "b1c83a9"}
+{"is_release": false, "git_version": "99596fb"}
