@@ -15,7 +15,7 @@ retrying!=1.3.0,>=1.2.3
 ryu>=3.23.2
 SQLAlchemy<1.1.0,>=0.9.9
 WebOb>=1.2.3
-python-keystoneclient!=1.8.0,>=1.6.0
+python-keystoneclient!=1.8.0,<3.0.0,>=1.6.0
 alembic>=0.8.0
 six>=1.9.0
 stevedore>=1.5.0
