@@ -52,7 +52,6 @@ data_files =
 	etc/neutron/plugins/cisco =
 	etc/neutron/plugins/cisco/cisco_vpn_agent.ini
 	etc/neutron/plugins/embrane = etc/neutron/plugins/embrane/heleos_conf.ini
-	etc/neutron/plugins/midonet = etc/neutron/plugins/midonet/midonet.ini
 	etc/neutron/plugins/ml2 =
 	etc/neutron/plugins/bigswitch/restproxy.ini
 	etc/neutron/plugins/ml2/linuxbridge_agent.ini
@@ -105,7 +104,6 @@ neutron.core_plugins =
 	bigswitch = neutron.plugins.bigswitch.plugin:NeutronRestProxyV2
 	brocade = neutron.plugins.brocade.NeutronPlugin:BrocadePluginV2
 	embrane = neutron.plugins.embrane.plugins.embrane_ml2_plugin:EmbraneMl2Plugin
-	midonet = neutron.plugins.midonet.plugin:MidonetPluginV2
 	ml2 = neutron.plugins.ml2.plugin:Ml2Plugin
 	nuage = neutron.plugins.nuage.plugin:NuagePlugin
 	oneconvergence = neutron.plugins.oneconvergence.plugin:OneConvergencePluginV2
